--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Assignment2.ipynb",
+      "name": "Copy of Copy of Assignment2.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -49,7 +49,7 @@
         "             [\"please pay for the exam\", 1]          \n",
         "             ]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -81,13 +81,612 @@
       "source": [
         "import numpy as np\n",
         "def email_to_feature(dict, email):\n",
-        "  raise NotImplementedError\n",
+        "  result = []\n",
+        "  word_set = email[0].split()\n",
+        "  for i in dict:\n",
+        "    if i in word_set:\n",
+        "      result.append(1)\n",
+        "    else:\n",
+        "      result.append(0)\n",
+        "  return result\n",
         "\n",
         "def emails_to_test_samples(dict, test_emails):\n",
-        "  raise NotImplementedError"
+        "  test_samples = []\n",
+        "  for i in test_emails:\n",
+        "    elem = email_to_feature(dict,i)\n",
+        "    elem.append(1)\n",
+        "    test_samples.append(elem)\n",
+        "  return test_samples"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sv7zICUE3jbn",
+        "outputId": "a81bb7a2-aee0-4d1e-db79-a42b445bbf3a"
+      },
+      "source": [
+        "emails_to_test_samples(dictionary,test_emails)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1],\n",
+              " [0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1,\n",
+              "  1,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  0,\n",
+              "  1,\n",
+              "  1]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
