--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Copy of Assignment2.ipynb",
+      "name": "Assignment.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -135,6 +135,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ISy4LQvW_a9H",
+        "outputId": "6f6aba75-0eb2-474e-dee9-0bc502c9d92b"
+      },
+      "source": [
+        "def indicator(x):\r\n",
+        "  return int(x==1)\r\n",
+        "\r\n",
+        "indicator(True)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3KdBdWJQINbe"
@@ -155,6 +186,33 @@
         "# - Calculate the phis here\n",
         "# - Write functions for the probability P(x|y) depending on these phis\n",
         "# - Use this function in the function spam_percentage \n",
+        "\n",
+        "def indicator(x):\n",
+        "  return int(x==1)\n",
+        "\n",
+        "def calculate_params(dict,test_emails):\n",
+        "  lst_Phi_i1 = []\n",
+        "  lst_Phi_i0 = []\n",
+        "  lst_Phi_1 = []\n",
+        "  for i in range(len(dict)):\n",
+        "    s_i1 = 0\n",
+        "    s_i0 = 0\n",
+        "    s_1 = 0\n",
+        "    s_0 = 0\n",
+        "    for j in len(test_emails):\n",
+        "      s_i1 += indicator(test_emails[j][i]==1)*indicator(test_emails[j][-1]==1)\n",
+        "      s_i0 += indicator(test_emails[j][i]==1)*indicator(test_emails[j][-1]==0)\n",
+        "      s_1 += indicator(test_emails[j][-1]==1)\n",
+        "      s_0 += indicator(test_emails[j][-1]==0)\n",
+        "    Phi_i1 = (1 + s_i1)/(2 + s_1)\n",
+        "    PHi_i0 = (1 + s_i0)/(2 + s_0)\n",
+        "    Phi_1 = (1 + s_1)/(2 + len(test_emails))\n",
+        "\n",
+        "    lst_Phi_i1.append(Phi_i1)\n",
+        "    lst_Phi_i0.append(Phi_i0)\n",
+        "    lst_Phi_1.append(Phi_1)\n",
+        "\n",
+        "\n",
         "\n",
         "def spam_percentage(email):\n",
         "\n",
