--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -141,27 +141,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ISy4LQvW_a9H",
-        "outputId": "6f6aba75-0eb2-474e-dee9-0bc502c9d92b"
+        "outputId": "1e15754f-26cc-4530-aded-f8ef772d4da0"
       },
       "source": [
-        "def indicator(x):\r\n",
-        "  return int(x==1)\r\n",
-        "\r\n",
-        "indicator(True)"
+        "print(True*True)"
       ],
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -200,10 +192,10 @@
         "    s_1 = 0\n",
         "    s_0 = 0\n",
         "    for j in len(test_emails):\n",
-        "      s_i1 += indicator(test_emails[j][i]==1)*indicator(test_emails[j][-1]==1)\n",
-        "      s_i0 += indicator(test_emails[j][i]==1)*indicator(test_emails[j][-1]==0)\n",
-        "      s_1 += indicator(test_emails[j][-1]==1)\n",
-        "      s_0 += indicator(test_emails[j][-1]==0)\n",
+        "      s_i1 += (test_emails[j][i]==1)*(test_emails[j][-1]==1)\n",
+        "      s_i0 += (test_emails[j][i]==1)*(test_emails[j][-1]==0)\n",
+        "      s_1 += (test_emails[j][-1]==1)\n",
+        "      s_0 += (test_emails[j][-1]==0)\n",
         "    Phi_i1 = (1 + s_i1)/(2 + s_1)\n",
         "    PHi_i0 = (1 + s_i0)/(2 + s_0)\n",
         "    Phi_1 = (1 + s_1)/(2 + len(test_emails))\n",
