--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -49,7 +49,7 @@
         "             [\"please pay for the exam\", 1]          \n",
         "             ]"
       ],
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "    test_samples.append(elem)\n",
         "  return test_samples"
       ],
-      "execution_count": 24,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,29 +135,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ISy4LQvW_a9H",
-        "outputId": "1e15754f-26cc-4530-aded-f8ef772d4da0"
-      },
-      "source": [
-        "print(True*True)"
-      ],
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3KdBdWJQINbe"
@@ -170,7 +147,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Ry9w9OtOFBi"
+        "id": "8Ry9w9OtOFBi",
+        "outputId": "3b8faabf-e35d-4421-dd60-1bc60fa04e85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# You can implement the above algorithm in any way you want.\n",
@@ -178,40 +159,88 @@
         "# - Calculate the phis here\n",
         "# - Write functions for the probability P(x|y) depending on these phis\n",
         "# - Use this function in the function spam_percentage \n",
-        "\n",
-        "def indicator(x):\n",
-        "  return int(x==1)\n",
-        "\n",
         "def calculate_params(dict,test_emails):\n",
         "  lst_Phi_i1 = []\n",
         "  lst_Phi_i0 = []\n",
         "  lst_Phi_1 = []\n",
+        "  test_samples = emails_to_test_samples(dict,test_emails)\n",
         "  for i in range(len(dict)):\n",
         "    s_i1 = 0\n",
         "    s_i0 = 0\n",
         "    s_1 = 0\n",
         "    s_0 = 0\n",
-        "    for j in len(test_emails):\n",
-        "      s_i1 += (test_emails[j][i]==1)*(test_emails[j][-1]==1)\n",
-        "      s_i0 += (test_emails[j][i]==1)*(test_emails[j][-1]==0)\n",
-        "      s_1 += (test_emails[j][-1]==1)\n",
-        "      s_0 += (test_emails[j][-1]==0)\n",
+        "    for j in range(len(test_samples)):\n",
+        "      s_i1 += (test_samples[j][i]==1)*(test_samples[j][-1]==1)\n",
+        "      s_i0 += (test_samples[j][i]==1)*(test_samples[j][-1]==0)\n",
+        "      s_1 += (test_samples[j][-1]==1)\n",
+        "      s_0 += (test_samples[j][-1]==0)\n",
         "    Phi_i1 = (1 + s_i1)/(2 + s_1)\n",
-        "    PHi_i0 = (1 + s_i0)/(2 + s_0)\n",
-        "    Phi_1 = (1 + s_1)/(2 + len(test_emails))\n",
+        "    #print(Phi_i1)\n",
+        "    Phi_i0 = (1 + s_i0)/(2 + s_0)\n",
+        "    Phi_1 = (1 + s_1)/(2 + len(test_samples))\n",
         "\n",
         "    lst_Phi_i1.append(Phi_i1)\n",
+        "    print(lst_Phi_i1)\n",
         "    lst_Phi_i0.append(Phi_i0)\n",
         "    lst_Phi_1.append(Phi_1)\n",
+        "  return lst_Phi_1#,lst_Phi_i0,lst_Phi_1\n",
         "\n",
+        "a = calculate_params(dictionary,test_emails)\n",
+        "# print(a)\n",
         "\n",
         "\n",
         "def spam_percentage(email):\n",
         "\n",
         "  return NotImplementedError"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.25]\n",
+            "[0.25, 0.0625]\n",
+            "[0.25, 0.0625, 0.5]\n",
+            "[0.25, 0.0625, 0.5, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875, 0.125]\n",
+            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875, 0.125, 0.125]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
