--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -49,7 +49,7 @@
         "             [\"please pay for the exam\", 1]          \n",
         "             ]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,11 +94,14 @@
         "  test_samples = []\n",
         "  for i in test_emails:\n",
         "    elem = email_to_feature(dict,i)\n",
-        "    elem.append(1)\n",
+        "    if i[-1] == 1:\n",
+        "      elem.append(1)\n",
+        "    else:\n",
+        "      elem.append(0)\n",
         "    test_samples.append(elem)\n",
         "  return test_samples"
       ],
-      "execution_count": 2,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -148,10 +151,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Ry9w9OtOFBi",
-        "outputId": "3b8faabf-e35d-4421-dd60-1bc60fa04e85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1ad71aaf-206b-4347-9859-43008c87892a"
       },
       "source": [
         "# You can implement the above algorithm in any way you want.\n",
@@ -162,7 +165,7 @@
         "def calculate_params(dict,test_emails):\n",
         "  lst_Phi_i1 = []\n",
         "  lst_Phi_i0 = []\n",
-        "  lst_Phi_1 = []\n",
+        "  Phi_1 = 0\n",
         "  test_samples = emails_to_test_samples(dict,test_emails)\n",
         "  for i in range(len(dict)):\n",
         "    s_i1 = 0\n",
@@ -175,68 +178,24 @@
         "      s_1 += (test_samples[j][-1]==1)\n",
         "      s_0 += (test_samples[j][-1]==0)\n",
         "    Phi_i1 = (1 + s_i1)/(2 + s_1)\n",
-        "    #print(Phi_i1)\n",
         "    Phi_i0 = (1 + s_i0)/(2 + s_0)\n",
         "    Phi_1 = (1 + s_1)/(2 + len(test_samples))\n",
         "\n",
         "    lst_Phi_i1.append(Phi_i1)\n",
-        "    print(lst_Phi_i1)\n",
         "    lst_Phi_i0.append(Phi_i0)\n",
-        "    lst_Phi_1.append(Phi_1)\n",
-        "  return lst_Phi_1#,lst_Phi_i0,lst_Phi_1\n",
-        "\n",
-        "a = calculate_params(dictionary,test_emails)\n",
-        "# print(a)\n",
-        "\n",
+        "  return lst_Phi_i1,lst_Phi_i0,Phi_1\n",
         "\n",
         "def spam_percentage(email):\n",
-        "\n",
+        "  (lst_Phi_i1,lst_Phi_i0,Phi_1) = calculate_params(dictionary,test_emails)\n",
+        "  #for loop to calculate the probability of whether new email is a spam or not.\n",
         "  return NotImplementedError"
       ],
-      "execution_count": 24,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.25]\n",
-            "[0.25, 0.0625]\n",
-            "[0.25, 0.0625, 0.5]\n",
-            "[0.25, 0.0625, 0.5, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875, 0.125]\n",
-            "[0.25, 0.0625, 0.5, 0.1875, 0.1875, 0.25, 0.1875, 0.1875, 0.25, 0.1875, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.125, 0.125, 0.125, 0.125, 0.25, 0.125, 0.1875, 0.1875, 0.25, 0.125, 0.125, 0.125, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.125, 0.125, 0.1875, 0.125, 0.1875, 0.125, 0.125]\n"
+            "0.5\n"
           ],
           "name": "stdout"
         }
